# boskeopolis-world

./: .gitignore  CMakeLists.txt  Makefile  block_behavior.cpp  block_component.cpp  block_condition.cpp  block_type.cpp  dir.cpp  game.cpp  input.cpp  inventory.cpp  json.cpp  layer.cpp  main.cpp  makefile  map.cpp  renderer.cpp  sprite_system.cpp  tile.cpp  tileset.cpp  utility.cpp
assets/charset/: latin.json
assets/localization/: en.json
assets/maps/: blueberry-1 (copy).json  blueberry-1.json  city-00.json
dev/: convert.js
engine/: engine.cmake  nasr.c
inc/: asset.h  bswmath.h  camera.h  character.h  color.h  config.h  engine.h  game_state.h  graphics.h  input.h  inventory.h  layers.h  map.h  rect.h  render.h  speed.h  sprite.h  text.h  treasure.h
include/: arg.hpp  block_behavior.hpp  block_component.hpp  block_condition.hpp  block_type.hpp  config.hpp  dir.hpp  game.hpp  input.hpp  inventory.hpp  json.hpp  layer.hpp  map.hpp  math.hpp  rect.hpp  renderer.hpp  sprite_system.hpp  text.hpp  tile.hpp  tileset.hpp  utility.hpp
src/: asset.c  assoc_array.c  assoc_array.cpp  bswmath.c  bytecode_machine.cpp  camera.c  crab.cpp  engine.c  engine.cpp  filename.c  filename.cpp  game_state.c  game_state.cpp  game_state_machine.c  game_state_machine.cpp  graphic.c  graphic.cpp  graphics.c  graphics.cpp  hero.cpp  input.c  input.cpp  int_map.c  int_map.cpp  inventory.c  inventory.cpp  io.cpp  jjson.cpp  json.c  json.cpp  jstring.c  jstring.cpp  layer_rain.cpp  level_state.cpp  localization.c  localization.cpp  localization_language.cpp  log.c  log.cpp  main.c  (+26 more)
(+84 files in other folders)
